...
        return notesViewModel.sectionHeaderTitle(for: section)
    }
    
    //MARK: - UITableViewDelegate
    
    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        let delete = UITableViewRowAction(style: .destructive, title: "Delete") { action, index in
            self.notesViewModel.delete(atIndex: index.row, section: indexPath.section)
        }
        
        return [delete]
    }
    
...
